--- a/index_identitymap.html
+++ b/index_identitymap.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" charset="utf-8" src="js/scripts/jquery-1.10.2.min.js" ></script>
     <script type="text/javascript" charset="utf-8" src="js/scripts/handlebars.js" ></script>
     <script type="text/javascript" charset="utf-8" src="js/scripts/ember-1.0.0-rc.7.js" ></script>
+    <script type="text/javascript" charset="utf-8" src="js/scripts/bootstrap-modal.js" ></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -273,8 +274,35 @@
         <div id="header" class="navbar navbar-fixed-top top-navbar">
             <div class="pageContent">
                 <img src="/images/header_logo.png">
+                <div class="pull-right">
+                    <button class="btn btn-default headerButton" data-toggle="modal" data-target="#newBucketModal">Create Bucket</button> <br />
+                    <button class="btn btn-default headerButton">Create Key</button>
+                </div>
             </div>
         </div>
+
+        <div class="modal fade" id="newBucketModal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Create new Bucket</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form role="form">
+                            <div class="form-group">
+                                <label>New Bucket name:</label>
+                                {{input valueBinding="newBucketName" classNames="form-control"}}
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" {{action "addBucket"}}>Save changes</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
     </script>
 
 </head>
