Adding Grunt. Separating the application into different files.

--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="screen" title="no title" charset="utf-8"/>
     <link rel="stylesheet" href="css/main.css" type="text/css" media="screen" title="no title" charset="utf-8"/>
 
-    <script type="text/javascript" charset="utf-8" src="js/scripts/jquery-1.10.2.min.js" ></script>
-    <script type="text/javascript" charset="utf-8" src="js/scripts/handlebars.js" ></script>
-    <script type="text/javascript" charset="utf-8" src="js/scripts/ember-1.0.0-rc.7.js" ></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script type="text/javascript" charset="utf-8">
-        var LDBB = Ember.Application.create();
-    </script>
-
-    <script type="text/x-handlebars" id="application">
-        Hello Ember!
-    </script>
-
-
-
+    <script src="https://login.persona.org/include.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" charset="utf-8" src="js/scripts/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/scripts/handlebars.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/scripts/ember-1.0.0-rc.7.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/scripts/bootstrap-modal.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/app.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/application_controller.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/user_controller.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/header_controller.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/buckets_route.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/buckets_controller.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/bucket_route.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/bucket_controller.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/bucket_view.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/key_list_item_view.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/key_controller.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/app/models.js"></script>
 </head>
 <body>
 
